fixed spacing between labels in the statusbar, changed font to MS Shell Dlg 2 (for Windows)

--- a/html/default.css
+++ b/html/default.css
@@ -5,7 +5,7 @@ body {
 	margin-right: 2px;
 }
 body,td,th {
-	font-family: "Lucida Grande", "Lucida Sans Unicode", verdana, lucida, sans-serif;
+	font-family: "MS Shell Dlg 2", "MS Shell Dlg", "Lucida Grande", "Lucida Sans Unicode", verdana, lucida, sans-serif;
 	font-size: small;
 	color: #000000;
 }
